<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/para"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoginActivity"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/headingO"
        android:layout_width="96dp"
        android:layout_height="72dp"

        android:layout_marginTop="40dp"
        android:fontFamily="@font/dynalight"
        android:text="@string/m1"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="80dp"
        android:layout_height="33dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/satisfy"
        android:text="@string/musico1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="312dp"
        android:layout_height="34dp"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/credential"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/password_forgot"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="755dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView22"
        android:layout_width="76dp"
        android:layout_height="42dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="168dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/button4"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/edittext_border"
        android:drawableLeft="@drawable/baseline_email_24"
        android:inputType="textEmailAddress"
        android:text="@string/email_option"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/button5"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="410dp"
        android:background="@drawable/edittext_border"
        android:drawableStart="@drawable/baseline_lock_24"
        android:inputType="textVisiblePassword"
        android:text="@string/password_fill"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="175dp"
        android:layout_height="23dp"
        android:layout_marginTop="464dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/password_forget"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="510dp"
        android:backgroundTint="@color/green"
        android:text="@string/login_option"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="279dp"
        android:layout_height="30dp"
        android:layout_marginTop="560dp"
        android:text="@string/signup_option"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="640dp"
        android:backgroundTint="@color/green"
        android:text="@string/google_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:text="@string/option"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>